--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,7 +1,13 @@
+---
 global:
-  scrape_interval: 15s
+  scrape_interval: 5s
+  evaluation_interval: 5s
+
+alerting:
+
+rule_files:
 
 scrape_configs:
-  - job_name: 'prometheus'
-    static_configs:
-    - targets: ['localhost:9090']
+- job_name: app
+  static_configs:
+  - targets: ["host.docker.internal:2112"]
